<resources>
    <string name="app_name" translatable="false">Meme Creator</string>
    <string name="brush_icon">Brush icon</string>
    <string name="brush">Brush</string>
    <string name="eraser_icon">Eraser icon</string>
    <string name="eraser">Eraser</string>
    <string name="brush_size">Brush Size</string>
    <string name="brush_opacity">Brush Opacity</string>
    <string name="brush_color">Brush Color</string>
    <string name="apply">Apply</string>
    <string name="transparent">Transparent</string>
    <string name="text">Text</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="choose_a_text_color">Choose a text color</string>
    <string name="change_your_text_size">Change your text size</string>
    <string name="apply_changes_instantly">Apply changes instantly</string>
    <string name="abc">ABC\nabc</string>
    <string name="text_outline_size">Text outline size</string>
    <string name="text_outline_color">Text outline color</string>
    <string name="change_the_opacity">Change the opacity</string>
    <string name="editor">Editor</string>
    <string name="add_item">Add Item</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="camera">Camera</string>
    <string name="editor_settings">Editor Settings</string>
    <string name="camera_permission_message">Camera permission required to capture an image\n\nWould you like to grant?</string>
    <string name="opening_the_camera">Opening the camera 📷</string>
    <string name="brush_settings_applied">Brush settings applied 🖌</string>
    <string name="add_an_image_icon">Add an image icon</string>
    <string name="add_an_emoji_icon">Add an emoji icon</string>
    <string name="emoji">Emoji</string>
    <string name="image">Image</string>
    <string name="sticker">Sticker</string>
    <string name="add_a_sticker">Add a sticker</string>
    <string name="choose_a_text_background_color">Choose a text background color</string>
    <string name="remove_background">Remove background</string>
    <string name="opening_emojies">Opening emojies 😇</string>
    <string name="your_text">Your text</string>
    <string name="save_publish">Save / Publish</string>
    <string name="duplicate">Duplicate</string>
    <string name="select_a_view_to_duplicate">Select a view to duplicate 😔</string>
    <string name="view_not_inside_canvas">The view not inside the selected canvas 😔</string>
    <string name="storage_permission_message">To save memes we require the storage permission\n\nWould you like to grant?</string>
    <string name="email">contact@spidy.app</string>
    <string name="gifs">GIFs</string>
    <string name="popular">Popular</string>
    <string name="packs">Packs</string>
    <string name="your_meme_saved_to_dcim">Your meme saved to DCIM 🤩</string>
    <string name="unable_to_save_meme">Sorry unable to save your meme 😰</string>
    <string name="publish_message">Would you like to share your meme with our community? If so, then your meme will appear in the showcase.</string>
    <string name="hi">Hi!</string>
    <string name="publish">Publish</string>
    <string name="no_thanks">No, thanks</string>
    <string name="never_ask_me">Never ask me</string>
    <string name="cancel">Cancel</string>
    <string name="enter_a_title">Enter a title for your meme</string>
    <string name="meme_title">maximum 50 characters</string>
    <string name="unable_to_publish_meme">Unable to publish your meme 😰</string>
    <string name="thanks_for_publishing">Thank you for showcasing your meme 🤩</string>
    <string name="share">Share…</string>
    <string name="meme_image">Meme image</string>
    <string name="load_more">Load more</string>
    <string name="you_don_t_have_any_template_packs">You don\'t have any template packs 🙁</string>
    <string name="get_one_from_store">Get one from store</string>
    <string name="search_for_template_packs">Search for template packs…</string>
    <string name="search">Search</string>
    <string name="filter_templates">Filter templates</string>
    <string name="template_pack_cover_image">Template pack cover image</string>
    <string name="network_fail">Network fail 🙁</string>
    <string name="no_template_packs_found">No template packs found</string>
    <string name="go_to_store">Go to store</string>
    <string name="feedback">Feedback</string>
    <string name="memes_bucket">Memes bucket</string>
    <string name="cancel_installation_message">Wait until the installation completes or cancel the current installation and try again.</string>
    <string name="install_fail">Template pack installation failed</string>
    <string name="install_success">Template pack added successfully</string>
    <string name="delete">Delete</string>
    <string name="add_pack">Add Pack</string>
    <string name="remove_pack_success">Template pack removed</string>
    <string name="fetching_meme">Fetching your meme…</string>
    <string name="generating_meme">Generating your meme…</string>
    <string name="collage">Collage</string>
    <string name="new_meme">New Meme</string>
    <string name="decoding_your_meme">Decoding your meme…</string>
    <string name="template_download_storage_permission">To download this template, we required storage permission.\n\nWould you like to grant?</string>
    <string name="downloading_started">Downloading started 😎</string>
    <string name="your_gifs">Your GIFs</string>
    <string name="your_memes">Your Memes</string>
    <string name="home">Home</string>
    <string name="others">Others</string>
    <string name="delete_success">Your meme deleted successfully</string>
    <string name="you_haven_t_created_any_gifs">You haven\'t created any GIFs 😐</string>
    <string name="you_haven_t_created_any_memes">You haven\'t created any Memes 😐</string>
    <string name="tuto_gif_frame_select">Long press on a frame to select, and select multiple frame to apply your changes to all selected frames</string>
    <string name="tamil">Tamil</string>
    <string name="universal">Universal</string>
    <string name="watch_a_vieo_while_we_generate">Watch a video while we generate your meme 🥳</string>
    <string name="collage_layout_image">Collage layout image</string>
    <string name="file_chooser">File Chooser</string>
</resources>