<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:id="@+id/addImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/add_an_image_icon"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_image" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/image"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/addEmojiView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/add_an_emoji_icon"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_emoji" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/emoji"
                android:textAlignment="center" />
        </LinearLayout>


        <LinearLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/addTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/add_a_sticker"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/text"
                android:textAlignment="center" />
        </LinearLayout>


<!--        <LinearLayout-->
<!--            android:foreground="?android:attr/selectableItemBackground"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            android:paddingTop="20dp"-->
<!--            android:paddingBottom="20dp"-->
<!--            android:paddingStart="10dp"-->
<!--            android:paddingEnd="20dp"-->
<!--            android:id="@+id/addStickerView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:orientation="vertical">-->

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="80dp"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:contentDescription="@string/add_a_sticker"-->
<!--                android:scaleType="fitXY"-->
<!--                app:srcCompat="@drawable/ic_sticker" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:ellipsize="end"-->
<!--                android:maxLines="1"-->
<!--                android:text="@string/sticker"-->
<!--                android:textAlignment="center" />-->
<!--        </LinearLayout>-->

    </LinearLayout>

</HorizontalScrollView>