<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner_white"
        android:orientation="vertical">

        <CheckBox
            android:textColor="@color/colorText"
            android:maxLines="1"
            android:ellipsize="end"
            android:id="@+id/applyCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/apply_changes_instantly"
            android:checked="true"
            app:layout_constraintBottom_toTopOf="@+id/textTmp3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/applyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/rounded_corner_accent"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/apply"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:textColor="@color/colorText"
            android:id="@+id/textTmp3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:text="@string/choose_a_text_color"
            app:layout_constraintEnd_toStartOf="@+id/fgColorHolder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/applyBtn" />

        <FrameLayout
            android:padding="1dp"
            android:id="@+id/fgColorHolder"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_border_dashed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/applyBtn"
            android:layout_width="42dp"
            android:layout_height="42dp">
            <View
                android:id="@+id/fgColorView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>


        <TextView
            android:id="@+id/textTmp4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:text="@string/choose_a_text_background_color"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toStartOf="@+id/bgColorHolder"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTmp3" />


        <FrameLayout
            android:padding="1dp"
            android:id="@+id/bgColorHolder"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_border_dashed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fgColorHolder"
            android:layout_width="42dp"
            android:layout_height="42dp">
            <View
                android:id="@+id/bgColorView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <Button
            android:id="@+id/removeBgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/remove_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTmp4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>